# voice_recognizer

./: AudioSampleReader.cpp  AudioSampleReader.h  CMakeLists.txt  Complex.cpp  Complex.h  DTW.cpp  DTW.h  FFT.cpp  FFT.h  IllegalArgumentException.cpp  IllegalArgumentException.h  MFCC.cpp  MFCC.h  Matrix.cpp  Matrix.h  README.md  SingularValueDecomposition.cpp  SingularValueDecomposition.h  SoundProcessingTask3.cpp  SoundProcessingTask3.h  WavFile.cpp  WavFile.h  WavFileException.cpp  WavFileException.h  dwa.txt  jeden.txt  main_Complex.cpp  main_DTW.cpp  main_SoundProcessingTask3.cpp  main_WavFile.cpp  makefile  test.txt  trzy.txt
